tests/vendor/valid/trivial/bitwise_zero.c
//expect 255
//tags: trivial, unary
int main(void) {
    return ~0;
}