tests/vendor/invalid/syntax/label_outside_function.c
//tags: simple, goto
label:
int main(void) {
    return 0;
}